# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "l1"
version = "0.1.0"
edition = "2021"

[lib]
# Criterion benchmarking does not work for a static library crate,
# so you have to comment the following line out for running
# benchmarks. Some better solution would be nice here.
crate_type = ["staticlib"]

[dependencies]
num = "0.4"
wide = "0.7"
soapysdr = { version = "0.4.0", path = "../rust-soapysdr" }

# Benchmarking related things.
# To run a benchmark, do: cargo bench

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cic_benchmark"
harness = false
